--- a/calculator.html
+++ b/calculator.html
@@ -14,10 +14,10 @@
         </div>
         <div class="navbar">
             <ul class="navbar-menu">
-                <!-- <li><a href="#alarm">Online Alarm Clock</a></li> -->
-                <li><a href="#stopwatch">Online Stopwatch</a></li>
-                <li><a href="#timer">Online Timer</a></li>
-                <li><a href="#stopwatch">Event Countdown</a></li>
+                
+                <li><a href="stopwatch.html">Online Stopwatch</a></li>
+    <li><a href="timer.html">Online Timer</a></li>
+    <li><a href="calculator.html">Date Calculator</a></li>
             </ul>
         </div>
         <div id="calculator">
