--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
     <div class="container">
-        
         <div class="header-section">
             <div class="header-title">Yashwanth's Events And Time Management</div>
-           <!–– <img src="images/small-picture.jpeg" alt="Yashwanth's Picture" class="header-image">
+            <!--<img src="images/small-picture.jpeg" alt="Yashwanth's Picture" class="header-image">-->
         </div>
-<div class="navbar">
+        <div class="navbar">
             <ul class="navbar-menu">
-                <!--<li><a href="#alarm">Online Alarm Clock</a></li>-->
-                <li><a href="#stopwatch">Online Stopwatch</a></li>
-                <li><a href="#timer">Online Timer</a></li>
-                <li><a href="#calculator">Date Calculator</a></li>
+                <li><a href="stopwatch.html">Online Stopwatch</a></li>
+                <li><a href="timer.html">Online Timer</a></li>
+                <li><a href="calculator.html">Date Calculator</a></li>
             </ul>
         </div>
         <div class="input-container">
@@ -44,7 +42,6 @@
                 <li data-name="Christmas Day" data-date="2024-12-25">Christmas Day</li>
             </ul>
         </div>
-        <div class="calendar-container" id="calendar-container"></div>
     </div>
     <!-- Scroll to Top Button -->
     <button id="scroll-to-top" title="Scroll to Top">&#8679;</button>
