--- a/calculator.html
+++ b/calculator.html
@@ -17,7 +17,7 @@
                 
                 <li><a href="stopwatch.html">Online Stopwatch</a></li>
     <li><a href="timer.html">Online Timer</a></li>
-    <li><a href="calculator.html">Date Calculator</a></li>
+    <li><a href="index.html">Event Countdown</a></li>
             </ul>
         </div>
         <div id="calculator">
