--- a/timer.html
+++ b/timer.html
@@ -17,7 +17,7 @@
                 <!-- <li><a href="#alarm">Online Alarm Clock</a></li> -->
                 <li><a href="stopwatch.html">Online Stopwatch</a></li>
             <li><a href="index.html">Event Countdown</a></li>
-            <li><a href="calculator.html">Date CalculatoR</a></li>
+            <li><a href="calculator.html">Date Calculator</a></li>
             </ul>
         </div>
         <div id="timer">
